tests/k8s/tests/deployments/headless/endpoint-labeled.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: headless-service-labeled
  namespace: default
subsets:
- addresses:
  - ip: 198.49.23.145
  ports:
  - port: 80
    protocol: TCP
