tests/k8s/tests/deployments/headless/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: toservices
  labels:
    test: toservices
spec:
  containers:
  - name: app-reach-services
    image: cilium/demo-client
    command: [ "bash", "-c", "while true; do sleep 5; done" ]
