tests/k8s/tests/deployments/headless/policy-label-v1.yaml
apiVersion: "cilium.io/v1"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-to-services"
spec:
  endpointSelector:
    matchLabels:
      "test": "toservices"
  egress:
  -
    toServices:
    - k8sServiceSelector:
        matchLabels:
          "app": "very-headless"
