tests/k8s/tests/deployments/headless/policy-label.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-to-services"
spec:
  endpointSelector:
    matchLabels:
      "test": "toservices"
  egress:
  -
    toServices:
    - k8sServiceSelector:
        selector:
          matchLabels:
            "app": "very-headless"
